# Terrarium

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  NOTICE  POSITIONING.md  README.md  README_zh.md  THIRD-PARTY
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ch-client/: Cargo.toml
crates/ch-client/src/: api.rs  client.rs  error.rs  lib.rs
crates/ch-client/tests/: integration.rs  mock.rs
crates/checkpoint/: Cargo.toml
crates/checkpoint/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs  main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/observe/: Cargo.toml
crates/observe/src/: main.rs
crates/sandboxd/: Cargo.toml
crates/sandboxd/src/: main.rs  sandbox.rs
crates/vmm/: Cargo.toml
crates/vmm-api/: Cargo.toml
crates/vmm-api/src/: lib.rs
crates/vmm-core/: Cargo.toml
crates/vmm-core/src/: lib.rs  rtc.rs  serial.rs  vm.rs
crates/vmm-core/src/arch/: mod.rs  x86_64.rs
crates/vmm-core/src/device/: balloon.rs  blk.rs  mem.rs  mod.rs  net.rs  rng.rs  virtio_mmio.rs  vsock.rs  watchdog.rs
crates/vmm-core/tests/: blk_smoke.rs  boot_smoke.rs  mem_smoke.rs  mp_smoke.rs  net_smoke.rs  reboot_smoke.rs  ubuntu_smoke.rs  vsock_smoke.rs
crates/vmm/examples/: boot.rs
crates/vmm/src/: main.rs
crates/vmm/tests/: api_integration.rs
docs/: baseline.md  resize-report.md
docs/decisions/: 0001-virtio-mmio-device-model.md  0002-linux-boot-protocol.md  0003-virtio-mmio-layout.md  0004-vmm-api-protocol.md  0005-guest-kernel-m2-features.md  0006-sandbox-protocol.md  0007-ebpf-framework.md  0008-virtio-net.md  README.md
docs/plans/: 2026-07-23-m0-ch-base.md
hypervisor/: PATCHES.md
images/: build-kernel.sh  build-rootfs.sh  build.sh
images/kernel/: config-6.12
images/rootfs/: init
sdk/python/terra/: __init__.py
xtask/: Cargo.toml
xtask/src/: main.rs
