[workspace]
resolver = "2"
members = [
    "crates/ch-client",
    "crates/controller",
    "crates/sandboxd",
    "crates/observe",
    "crates/checkpoint",
    "crates/cli",
    "crates/mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/terrarium/Terrarium"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
