[package]
name = "xtask"
description = "Terrarium 构建辅助任务（guest 内核 / initramfs 等），用法：cargo xtask <cmd>"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap.workspace = true
tracing.workspace = true
