[package]
name = "mcp"
description = "MCP server：Terrarium sandbox 能力暴露为 MCP 工具"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "terra-mcp"
path = "src/main.rs"

[dependencies]
controller = { path = "../controller" }
serde = { workspace = true }
serde_json = { workspace = true }
