[package]
name = "vmm-core"
description = "Terrarium VMM 核心：VM 生命周期、地址空间、vCPU 管理"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
kvm-bindings.workspace = true
kvm-ioctls.workspace = true
vm-memory.workspace = true
linux-loader.workspace = true
virtio-queue.workspace = true
virtio-bindings.workspace = true
vmm-sys-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
