[package]
name = "vmm"
description = "terra-vmm 可执行文件：组合各 crate 的薄壳二进制，每个 VM 一个进程"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "terra-vmm"
path = "src/main.rs"

[dependencies]
vmm-core = { path = "../vmm-core" }
thiserror.workspace = true
tracing.workspace = true
clap.workspace = true
